--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-burger-menu": "^3.0.8",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
+    "react-ga4": "^2.1.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
