--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -18,6 +18,21 @@ jobs:
         node-version-file: '.nvmrc'
     - name: Install
       run: npm ci
+
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    - name: Generate sitemap
+      run: python scripts/generate_sitemap.py
+
+    - name: Commit sitemap.xml
+      run: |
+        git config user.name "Automated"
+        git config user.email "actions@users.noreply.github.com"
+        git add sitemap.xml
+        git commit -m "Update sitemap.xml" || echo "No changes to commit"
     - name: Build and Deploy
       env:
         NODE_ENV: production
