--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,6 +5,7 @@ on:
     branches: [ master ]
 jobs:
   deployment:
+    if: github.actor == 'gilbertrec'
     runs-on: ubuntu-latest
     environment: production
     steps:
@@ -33,6 +34,7 @@ jobs:
         git config user.email "actions@users.noreply.github.com"
         git add sitemap.xml
         git commit -m "Update sitemap.xml" || echo "No changes to commit"
+        git push
     - name: Build and Deploy
       env:
         NODE_ENV: production
