--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.0",
     "react-ga4": "^2.1.0",
+    "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
